# AddressGen

./: README.md  main.py
HDwallet/: README.md  hd_wallet_generator.py  mainNoGui.py  requirements.txt  wallet_explorer.py
HDwallet/old/: README.md
HDwallet/web_app/: README.md  app.py  requirements.txt
HDwallet/web_app/static/: header-footer.css  style.css  wallet_data.json
HDwallet/web_app/templates/: guide.html  index.html
P2PK/: README.md  key_generator.py
P2PKH/: README.md  cli.py  gui.py  mainNoGUI.py  p2pkh.py  requirements.txt
P2PKH/AppDesktop/: README.md  app.py  controller.py  requirements.txt  themes.py  ui_components.py  utils.py
P2PKH/AppWeb/: README.md  requirements.txt  utils.py
P2PKH/AppWeb/static/: style.css
P2PKH/AppWeb/templates/: index.html
P2TR/: README.md  p2tr.py  requirements.txt  traproot.py
P2WPKH/: README.md  cli.py  gui.py  p2wpkh.py
P2WPKH/AppWeb/: README.md  app.py
P2WPKH/AppWeb/static/: script.js
P2WPKH/AppWeb/templates/: index.html
P2WPKH/WebApp/: README.md  app.py  requirements.txt  utils.py
P2WPKH/WebApp/static/: style.css
P2WPKH/WebApp/templates/: index.html
VanityAddress/: CMakeLists.txt  Dockerfile  README.md  vanity.cpp  vanity.py
documentation/: P2PKH.tex
documentation/scrpt.tex/: 0-chiavi_e_indirizzi.tex  1-chiavi_p2pk.tex  2-chiavi_e_indirizzi_p2pkh.tex  3-hd_wallet.tex
